# RelPoseFromTrajectory

./: LICENSE  README.md
src/: CMakeLists.txt
src/rel_pose_from_trajectory/: CMakeLists.txt  RelPoseFromTrajectorySE3.cpp  RelPoseFromTrajectorySE3.hpp  RelPoseFromTrajectorySim3.cpp  RelPoseFromTrajectorySim3.hpp  rel_pose_from_trajectory.cpp
